--- a/index.html
+++ b/index.html
@@ -149,7 +149,16 @@
       link: 'https://amzn.to/4lAOFDs',
       image: 'https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?auto=format&fit=crop&w=800&q=60',
       category: 'Tech', tags: ['Travel','Power']
-    },
+    },{
+  id: 'deal-004',
+  title: 'adidas Grand Court 2.0 Sneakers',
+  price: '$65.00',   // (update with real price if you want)
+  link: 'https://amzn.to/45NzW24',
+  image: 'image: 'https://m.media-amazon.com/images/I/71cL4F3AqPL._AC_UX695_.jpg', 
+  category: 'Fashion',
+  tags: ['MinimalStyle','Sneakers']
+},
+
   ];
 
   // ======== RENDER ========
